working version on x86

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,19 +1,24 @@
 KERNELDIR ?= /lib/modules/$(shell uname -r)/build
-#KERNELDIR=/home/redha/m2/nmv/linux-4.2.3
+#KERNELDIR_ARM ?= /home/redha/stageM2/yocto_krogoth-next/fsl-community-bsp/build/tmp/work/imx6qsabrelite-poky-linux-gnueabi/linux-boundary/4.1.15-r0/build
+KERNELDIR_ARM ?= /home/redha/stageM2/yocto/fsl-community-bsp/build/tmp/work/imx6qsabrelite-poky-linux-gnueabi/linux-boundary/3.0.35-r0/git/
 PWD := $(shell pwd)
 
 obj-m := core_regulator.o
-#core_regulator-objs := core_regulator.o
-
 
 all:
 	make -C $(KERNELDIR) M=$(PWD) modules
+
+no_pmu:
+	KCFLAGS="-DNO_PMU" make -C $(KERNELDIR) M=$(PWD) modules
+
+arm:
+	KCFLAGS="-DNO_PMU" make CROSS_COMPILE=arm-linux-gnueabihf- ARCH=arm -C $(KERNELDIR_ARM) M=$(PWD) modules
+
+x86:
+	KCFLAGS="-DCORE2QUAD" make -C $(KERNELDIR) M=$(PWD) modules
 
 clean:
 	make -C $(KERNELDIR) M=$(PWD) clean
 	rm -rf *~ *#
 
-send: core_regulator.ko
-	scp -P10022 $^ root@localhost:
-
-.PHONY: all clean send
+.PHONY: all no_pmu clean arm
